--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Hello 👋</h1>
+    <h1>Hi switee</h1>
     <p>This is a simple HTML page.</p>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
